@@ -613,8 +613,25 @@ else
   esac
 fi
 test -s 9a.E || rm -f 9a.E
+$xx -t: -1 1 -2 1 $srcdir/trailing-sp.I1 $srcdir/trailing-sp.I2 > trailing-sp.O 2> trailing-sp.E
+code=$?
+if test $code != 0 ; then
+  $echo "Test trailing-sp failed: ../../src/join return code $code differs from expected value 0" 1>&2
+  errors=`expr $errors + 1`
+else
+  cmp trailing-sp.O $srcdir/trailing-sp.X > /dev/null 2>&1
+  case $? in
+    0) if test "$VERBOSE" ; then $echo "passed trailing-sp"; fi ;;
+    1) $echo "Test trailing-sp failed: files trailing-sp.O and $srcdir/trailing-sp.X differ" 1>&2;
+       errors=`expr $errors + 1` ;;
+    2) $echo "Test trailing-sp may have failed." 1>&2;
+       $echo The command "cmp trailing-sp.O $srcdir/trailing-sp.X" failed. 1>&2 ;
+       errors=`expr $errors + 1` ;;
+  esac
+fi
+test -s trailing-sp.E || rm -f trailing-sp.E
 if test $errors = 0 ; then
-  $echo Passed all 35 tests. 1>&2
+  $echo Passed all 36 tests. 1>&2
 else
   $echo Failed $errors tests. 1>&2
 fi
